# pi_project

./: CMakeLists.txt  CMakeLists_a11_test.txt  CMakeLists_dd.txt  build.sh  c_cpp_properties.json  geany_settings.txt  tags
docu/: setupA111  setupCameraModule
include/: A111.hpp  CameraModule.hpp  a111.hpp  data_acquisition.hpp
src/: A111.cpp  CameraModule.cpp  a111.cpp  data_acquisition.cpp  main.cpp
